Bug 497884: Intermittent failure in test_classifier.html and test_classifier_worker.html. r=sdwilsh