toolkit/components/url-classifier/content/listmanager.js
@@ -45,9 +45,6 @@
 // TODO more comprehensive update tests, for example add unittest check 
 //      that the listmanagers tables are properly written on updates
 
-// How frequently we check for updates (30 minutes)
-const kUpdateInterval = 30 * 60 * 1000;
-
 function QueryAdapter(callback) {
   this.callback_ = callback;
 };
@@ -68,6 +65,7 @@ function PROT_ListManager() {
 
   this.currentUpdateChecker_ = null;   // set when we toggle updates
   this.prefs_ = new G_Preferences();
+  this.updateInterval = this.prefs_.getPref("urlclassifier.updateinterval", 30 * 60) * 1000;
 
   this.updateserverURL_ = null;
   this.gethashURL_ = null;
@@ -301,16 +299,15 @@ PROT_ListManager.prototype.maybeToggleUpdateChecking = function() {
 /**
  * Start periodic checks for updates. Idempotent.
  * We want to distribute update checks evenly across the update period (an
- * hour).  To do this, we pick a random number of time between 0 and 30
- * minutes.  The client first checks at 15 + rand, then every 30 minutes after
- * that.
+ * hour).  The first update is scheduled for a random time between 0.5 and 1.5
+ * times the update interval.
  */
 PROT_ListManager.prototype.startUpdateChecker = function() {
   this.stopUpdateChecker();
   
   // Schedule the first check for between 15 and 45 minutes.
-  var repeatingUpdateDelay = kUpdateInterval / 2;
-  repeatingUpdateDelay += Math.floor(Math.random() * kUpdateInterval);
+  var repeatingUpdateDelay = this.updateInterval / 2;
+  repeatingUpdateDelay += Math.floor(Math.random() * this.updateInterval);
   this.updateChecker_ = new G_Alarm(BindToObject(this.initialUpdateCheck_,
                                                  this),
                                     repeatingUpdateDelay);
@@ -319,12 +316,12 @@ PROT_ListManager.prototype.startUpdateChecker = function() {
 /**
  * Callback for the first update check.
  * We go ahead and check for table updates, then start a regular timer (once
- * every 30 minutes).
+ * every update interval).
  */
 PROT_ListManager.prototype.initialUpdateCheck_ = function() {
   this.checkForUpdates();
   this.updateChecker_ = new G_Alarm(BindToObject(this.checkForUpdates, this), 
-                                    kUpdateInterval, true /* repeat */);
+                                    this.updateInterval, true /* repeat */);
 }
 
 /**
